update jextractgl